<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="32dp">

    <ImageView
        android:id="@+id/login_bottom_sheet_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@null"
        android:src="@drawable/outline_error_outline_24"
        app:tint="@color/md_theme_primary" />

    <TextView
        android:id="@+id/login_bottom_sheet_title"
        style="?attr/textAppearanceHeadlineSmallEmphasized"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/login_save_session_title"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/login_bottom_sheet_supporting_text"
        style="?attr/textAppearanceBodyMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login_save_session_supporting_text"
        android:textAlignment="viewStart" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_bottom_sheet_dismiss_btn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:paddingVertical="14dp"
            android:text="@string/login_save_session_dismiss" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_bottom_sheet_agree_btn"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp"
            android:text="@string/login_save_session_accept" />
    </LinearLayout>
</LinearLayout>
